- Some fixes and improvements in pasting formatted text

Reggie, 22.3.1999:
------------------
- Pasting multiple paragraphs with formats works

Reggie, 23.3.1999:
------------------
- Changed the toolbar pixmap which shows the text color - much nicer now
- Fixes in the GUI
- Started with internals for joining/splitting cells

Reggie, 24.3.1999:
------------------
- Added menu entry for splitting table cells
- Improved Tables:
  - It's possible to ungroup a table (each cell becomes an own frameset - ok,
    they are always own frame sets, but the table manager stops controlling them
    in this case)
  - More internal work for joining/splitting table cells

Reggie, 25.3.1999:
------------------
- More work on joining table cells:
  - Joining in horizontal direction works sort of - but
    some strange things are still going on here ;-)
- Made some menu items functional

Reggie, 26.3.1999:
------------------
- Joining table cells in horizontal direction works quite well now
  (at least it doesn't crash anymore and resizes correctly :-)

Reggie, 27.3.1999:
------------------
- Implemented joining table cells in vertical direction
  (only the auto-resize of vertical joined table cells screws
   up a table a bit - will fix it)

Reggie, 28.3.1999:
------------------
- Clicking on joined/hidden tables cells works correctly now
- Some menu items/toolbar pics for table manipulations get disabled/enabled
  correctly to avoid mistakes by the user

Reggie, 29.3.1999:
------------------
- For joining cells it's not required anymore to put the cursor
  into the table first
- Implemented splitting cells - this means you can only split a joined
  cell yet, no "normal" cells. I'll improve that later.
- Prepeared everything for context sensitive right button menus

Reggie, 1.4.1999:
-----------------
- Started implementing footnotes and endnotes

Reggie, 2.4.1999:
-----------------
- Some cleanups
- Much more work on footnotes/endnotes